--- a/Models/Speech_LLM/2024.02.12_BASE-TTS.md
+++ b/Models/Speech_LLM/2024.02.12_BASE-TTS.md
@@ -93,7 +93,7 @@
 > Despite its simplicity, this objective can capture complex probability distributions of expressive speech, thus alleviating the oversmoothing problem seen in early neural TTS systems \cite{ren2022revisiting}.
 > As an implicit language model, ***BASE TTS*** is also observed to make a qualitative jump in prosody rendering once a large enough variant is trained on sufficient data. 
 >
-> Further, we propose speaker-disentangled speechcodes that are built on top of a WavLM \cite{wavlm} Self-Supervised Learning (SSL) speech model.
+> Further, we propose speaker-disentangled speechcodes that are built on top of a [WavLM [39]](../../Models/Speech_Representaion/2021.10.26_WavLM.md) Self-Supervised Learning (SSL) speech model.
 > We follow [AudioLM [16]](../../Models/Speech_LLM/2022.09.07_AudioLM.md) which introduces semantic tokens constructed by discretizing activations of an SSL model.
 > We extend this approach to better control information captured by the speechcodes.
 > Our strategy is to limit the responsibilities of the autoregressive speechcode predictor ("speechGPT") to segmental contents, prosody, and duration, while designating a separate, speechcode-to-waveform decoder (called "speechcode decoder") with the reconstruction of speaker identity and recording conditions.
@@ -140,7 +140,7 @@
 
 ### LTTS Simplifies Modeling
 
-> Since [Tacotron2 [22]](../../Models/TTS2_Acoustic/2017.12.16_Tacotron2.md), a successful TTS paradigm has been to separate speech creation into three sub-systems: (1) a Frontend responsible for text normalization, grapheme-to-phoneme conversion and  SSML tag handling e.g.
+> Since [Tacotron2 [22]](../../Models/TTS2_Acoustic/2017.12.16_Tacotron2.md), a successful TTS paradigm has been to separate speech creation into three sub-systems: (1) a Frontend responsible for text normalization, grapheme-to-phoneme conversion and SSML tag handling e.g.
 > to mark emphasis \cite{DBLP:journals/corr/abs-2307-07062}, (2) a Mel-spectrogram generator, inferring the amplitudes of the speech signal and responsible for the model expressivity, and (3) a dedicated Vocoder \cite{DBLP:conf/ssw/OordDZSVGKSK16, jiao2021universal}, generating the waveform by inferring the phase information.
 > Expert knowledge can be induced to improve its performance such as using pre-computed features \cite{DBLP:conf/iclr/0006H0QZZL21}, coarse or fine-grained prosody information (\cite{Copycat}, and style control \cite{DBLP:conf/naacl/PrateekLBDLMRW19}.
 > It has also proven successful with architectures such as Transformers \cite{li2019neural, DBLP:conf/iclr/0006H0QZZL21}, Flows （[VITS [24]](../../Models/E2E/2021.06.11_VITS.md)), and Diffusion ([Grad-TTS [26]](../../Models/TTS2_Acoustic/2021.05.13_Grad-TTS.md)).
@@ -149,7 +149,7 @@
 > Any error made during an earlier stage is propagated to the next.
 > ***BASE TTS*** and other LTTS models are breaking these limitations.
 > We simplify the data preparation by requiring only a large amount of audio, where texts can be obtained from a speech-to-text system, and require no phoneme extraction.
-> GPT-based architectures \cite{radford2019language} have flourished by enabling versatile prompt-based task formulation, integration of expert feedback \cite{ouyang2022training}, and use as a foundational model with quick fine-tuning  \cite{hu2022lora, fu2023effectiveness} e.g.
+> GPT-based architectures \cite{radford2019language} have flourished by enabling versatile prompt-based task formulation, integration of expert feedback \cite{ouyang2022training}, and use as a foundational model with quick fine-tuning \cite{hu2022lora, fu2023effectiveness} e.g.
 > on a specific task, a set of speakers or a new locale.
 > ***BASE TTS*** shows that an end-to-end approach can achieve high expressivity on a few audio examples and in a multilingual setting, marking a high bar of quality in Spanish.
 
@@ -191,7 +191,7 @@
 ### 3.2.Discrete Speech Representations: 离散语音表示
 
 > Discrete representation is foundational to the success of LLM, but identifying a compact and informative representation is less obvious in speech than in text, and less explored.
-> For ***BASE TTS***, we first experiment with a  Vector Quantized Variational Autoencoder (VQ-VAE) baseline ([VQ-VAE [34]](../../Modules/VQ/2017.11.02_VQ-VAE.md)), where an auto-encoder based architecture reconstructs mel-spectrograms through a discrete bottleneck, as described in Section \ref{sec:vqvae}.
+> For ***BASE TTS***, we first experiment with a [Vector Quantized Variational Autoencoder (VQ-VAE) [34]](../../Modules/VQ/2017.11.02_VQ-VAE.md) baseline, where an auto-encoder based architecture reconstructs mel-spectrograms through a discrete bottleneck, as described in Section \ref{sec:vqvae}.
 > VQ-VAE has been a successful paradigm in speech and image representation, and especially as a unit of modeling for TTS ([VQ-VAE [34]](../../Modules/VQ/2017.11.02_VQ-VAE.md); [TortoiseTTS [21]](../../Models/_tmp/2023.05.12_TorToise-TTS.md)).
 >
 > In Section \ref{sec:wavlm}, however, we introduce a novel method of learning speech representations through WavLM-based speechcodes.
@@ -203,7 +203,7 @@
 
 #### 3.2.1.Autoencoder-Based Speech Tokens
 
-> Our baseline discretization method is a VQ-VAE  trained to reconstruct mel-spectrograms. 
+> Our baseline discretization method is a VQ-VAE trained to reconstruct mel-spectrograms. 
 > The encoder and decoder are convolutional neural networks with residual connections, which downsample the speech representation to a frequency of 25Hz. 
 > To (partially) disentangle speaker information from the speech representations, we introduce a global reference encoder \cite{skerry2018towards}. 
 > This encoder learns a fixed-size utterance-level representation, which is concatenated to the speechcodes before reconstructing with the VQ-VAE decoder.
@@ -214,7 +214,7 @@
 #### 3.2.2.WavLM-Based Speechcodes
 
 > We aim to develop speechcodes that contain phonetic and prosodic information, but which are disentangled from speaker identity, recording conditions, and other spurious features in the audio signal.
-> To this end, we introduce a speech tokenizer based on features extracted from a pretrained WavLM model \cite{wavlm}, further trained with losses that encourage disentangling the speaker identity.
+> To this end, we introduce a speech tokenizer based on features extracted from a pretrained [WavLM [39]](../../Models/Speech_Representaion/2021.10.26_WavLM.md) model, further trained with losses that encourage disentangling the speaker identity.
 > Our approach similar to the one introduced in \cite{martíncortinas2024enhancing} with modifications that reduce bitrate of the codes.
 > The overall architecture of the speech tokenizer is shown in \cref{fig:wavlm-based}.
 >
@@ -262,7 +262,7 @@ $$
 ### 3.4.Waveform Generation
 
 > Our baseline uses a diffusion-based spectrogram decoder and a separately trained UnivNet \cite{univnet} vocoder, as proposed in [TortoiseTTS [21]](../../Models/_tmp/2023.05.12_TorToise-TTS.md).
-> Diffusion-based TTS decoding can generate high-quality speech, but it suffers from slow inference and cannot generate samples incrementally - This lack of streamabilility forces us to obtain the audio output for the entire sequence in one go.  
+> Diffusion-based TTS decoding can generate high-quality speech, but it suffers from slow inference and cannot generate samples incrementally - This lack of streamabilility forces us to obtain the audio output for the entire sequence in one go.
 > Furthermore, the diffusion model in [TortoiseTTS [21]](../../Models/_tmp/2023.05.12_TorToise-TTS.md) predicts spectrograms, and requires a separately trained vocoder to generate audio, complicating the training and inference pipeline. 
 >
 > Our proposed decoder, inspired by \cite{ecat}, is trained in an end-to-end fashion to predict waveforms.
@@ -277,7 +277,7 @@ $$
 > We do so because the dense latent representation provides much richer information than a single speechcode, following [TortoiseTTS [21]](../../Models/_tmp/2023.05.12_TorToise-TTS.md).
 > During training, we feed the text and target codes to the trained SpeechGPT (with parameters frozen) and then condition the decoder on the last hidden state.
 > Feeding the last hidden states of SpeechGPT helps improving the segmental and acoustic quality of speech, but also couples the decoder to a specific version of SpeechGPT.
-> This complicates experimentation because it forces the two components to  be always built sequentially. 
+> This complicates experimentation because it forces the two components to be always built sequentially. 
 > This limitation needs to be addressed in future work.
 
 ## 4.Experiments: 实验
@@ -328,7 +328,7 @@ $$
 > We convert the reference speech segment to a mel-spectrogram and feed it to the reference encoder.
 > The target speech segment is tokenized by either VQ-VAE or WavLM, forming the target speechcodes.
 > We concatenate the encoded reference with input text embeddings and speechcodes embedding, and feed them to the autoregressive Transformer.
-> The model is optimized with cross-entropy loss on both text tokens (weight 0.01) and speechcodes (weight 1.0).  
+> The model is optimized with cross-entropy loss on both text tokens (weight 0.01) and speechcodes (weight 1.0).
 >
 > Our autoregressive Transformer structure is largely identical to the GPT-2 language model \cite{radford2019language}.
 > For most of the experiments reported below ("BASE-large"), we train a 32-layer decoder-only transformer with masked self-attention heads (1536-dimension states and 24 attention heads).
@@ -344,7 +344,7 @@ $$
 ### 4.3.Evaluation Methodology: 评估方法
 
 > Three types of tests are considered to assess the model quality:
-
+>
 > - \textbf{MUSHRA (Multiple Stimuli with Hidden Reference and Anchor)} among competing systems by native listeners in US English and Spanish.
 > We use a MUSHRA scale ranging from 0 to 100.
 > We do not place an Upper/Lower anchor or ask listeners to rate those at 0 or 100.
@@ -355,9 +355,10 @@ $$
 > These sentences are designed to contain challenging tasks - parsing garden-path sentences \cite{garden-path}, placing phrasal stress on long-winded compound nouns \cite{syntax-prosody}, producing emotional or whispered speech, or producing the correct phonemes for foreign words like "qi" or punctuations like "@" - none of which ***BASE TTS*** is explicitly trained to perform.
 > Our hypothesis is that as ***BASE TTS*** increases in model capacity and trains over more data, the model will start to acquire these abilities, following evidence that scaling in these dimensions begets qualitative ability jumps \cite{sparks, webb2023emergent, wei2022emergent}.
 > We share the full testset in Appendix \ref{appendix:emergent}.
-> - \textbf{Automated objective evaluations} to test TTS robustness, especially issues with missed, duplicated or hallucinated synthesis ([NaturalSpeech2 [20]](../../Models/Diffusion/2023.04.18_NaturalSpeech2.md)), and speaker similarity.  We use an ASR model to compute the Word Error Rate (WER) by comparing the testset text (ground truth) against the ASR output from the synthetic speech. 
-> In addition, we employ a [speaker verification model](https://huggingface.co/microsoft/wavlm-base-plus-sv) fine-tuned on WavLM features \cite{wavlm} to obtain speaker embeddings from the original recordings and synthetic speech, and then we compute the cosine distance between them to get a speaker similarity metric (SIM). 
-
+> - \textbf{Automated objective evaluations} to test TTS robustness, especially issues with missed, duplicated or hallucinated synthesis ([NaturalSpeech2 [20]](../../Models/Diffusion/2023.04.18_NaturalSpeech2.md)), and speaker similarity. 
+> We use an ASR model to compute the Word Error Rate (WER) by comparing the testset text (ground truth) against the ASR output from the synthetic speech. 
+> In addition, we employ a [speaker verification model](https://huggingface.co/microsoft/wavlm-base-plus-sv) fine-tuned on [WavLM [39]](../../Models/Speech_Representaion/2021.10.26_WavLM.md) features to obtain speaker embeddings from the original recordings and synthetic speech, and then we compute the cosine distance between them to get a speaker similarity metric (SIM). 
+>
 > For subjective evaluations, we report average MUSHRA scores with $95\%$ confidence intervals.
 > Furthermore, to determine the significance of differences between two systems, we conduct a t-test; if the p-value is $< 0.05$, we consider the difference significant.
 > To aid visualization we mark statistically significantly better systems with \textbf{bold}.
