--- a/Models/TTS3_Vocoder/2022.06.09_BigVGAN.md
+++ b/Models/TTS3_Vocoder/2022.06.09_BigVGAN.md
@@ -171,3 +171,5 @@ In addition to above efforts, we have explored other directions, including vario
 ## 5.Results: 结果
 
 ## 6.Conclusions: 结论
+
+This study explores the limits of universal neural vocoding with an unprecedented scale of the data, model, and evaluations. We analyze the performance with various automatic and human evaluations across diverse scenarios including unseen speakers, languages, recording environments and out-of-distribution data. We present BigVGAN with an improved generator architecture by introducing anti-aliased periodic activation function with learned frequency control, which injects the desired inductive bias for waveform generation. Based on the improved generator, we demonstrate the largest GAN vocoder with strong zero-shot performance under various OOD conditions, including unseen recording environments, singing voice, and instrumental audio. We believe that BigVGAN, combined with practical lessons learned from the large scale training, will inspire future endeavors for universal vocoding and improve the state-of-the-art results for real-world applications, including voice cloning, voice conversion, speech translation, and audio codec. 
